corpus/mojo_template_test.txt
=================================
Bracketed Code
=================================
<% my $var = 1; %>
---
(template
  (bracketed_perl_code
	(perl_code)))
=================================
Bracketed Code 2 perl expression
=================================
<%= "Hello, World!" %>
---
(template
  (bracketed_perl_expression
	(perl_code)))
=================================
Bracketed Code 3 perl expression escaped
=================================
<%== b('<div>excluded!</div>') %>
---
(template
  (bracketed_perl_expression_escaped
	(perl_code)))
=================================
Bracketed Code 4 perl expression escaped trim newline
=================================
<%== 'an equals before the closing tag means to trim Whitespace characters around tags' =%>
---
(template
  (bracketed_perl_expression_escaped
  (perl_code)))
=================================
Bracketed Code 5 allow = as part of code
=================================
<%== $say '2+2 = 4' =%>
---
(template
	(bracketed_perl_expression_escaped
	(perl_code)))
=================================
Bracketed Code 6 allow % as part of code
=================================
<%== my %test = (); =%>
---
(template
	(bracketed_perl_expression_escaped
	(perl_code)))
=================================
Bracketed Comment
=================================
<%# This is a comment %>
---
(template
  (bracketed_comment
	(comment)))

=================================
Shorthand Code
=================================
% say $mt->render(<<'EOF', [1 .. 13], 'Hello World!');
---
(template
  (shorthand_perl_code
	(short_perl_code)))
=================================
Shorthand Code 2 perl expression
=================================
%= "Hello, World!";
---
(template
  (shorthand_perl_expression
	(short_perl_code)))
=================================
Shorthand Code 3 perl expression escaped
=================================
%== "Hello, World!";
---
(template
  (shorthand_perl_expression_escaped
	(short_perl_code)))
=================================
Shorthand Code 4 allow % character
=================================
% my %test = ();
---
(template
	(shorthand_perl_code
	(short_perl_code)))
=================================
Shorthand Code 5 pathological %= as part of code
=================================
% my $string = 'test%=test';
---
(template
	(shorthand_perl_code
	(short_perl_code)))

=================================
Shorthand Comment
=================================
%# This is a comment
---
(template
  (shorthand_comment
	(comment)))

=================================
Content
=================================
<!DOCTYPE html>
<html lang="en">
  <head><% say $title%></head>
  <body></body>
</html>
---
(template
  (content)
  (bracketed_perl_code
	(perl_code))
  (content))
  
=================================
Mixed Content
=================================
<!DOCTYPE html>
<html lang="en">
  <head><% say $title%></head>
  <body>
  Hello % say $name; <bogus not content>
  </body>
</html>
---
(template
(content)
(bracketed_perl_code
  (perl_code))
(content)
(shorthand_perl_code
  (short_perl_code))
(content))
